--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,9 @@ body {
       color: #111;
   }
   .container {
-      padding: 80px 120px;
+      /*padding: 80px 120px;*/
+      padding-top: 80px;
+      padding-bottom: 80px;
   }
   .person {
       border: 10px solid transparent;
